[package]
name = "rust-6809"
version = "0.1.0"
edition = "2021"
description = "MC6809 assembler, simulator and debugger written in Rust."
[[bin]]
name = "6809"
path = "./src/main.rs"

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
clap-num = "1.0.2"
lazy_static = "1.4.0"
regex = "1.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = {version = "0.42.0", features = ["Win32_System_Console", "Win32_Foundation"]}
